tests/parser/fail/self-class-param-bin.som
"test:
failMessage:
  - contains: define
  - contains: self
"

SelfClassParamBin = (
  ----

  / self = ('rip')
)
